@@ -21,7 +21,7 @@
 #define POKEY_OFFSET_POTGO 0x0b
 #define POKEY_OFFSET_SEROUT 0x0d
 #define POKEY_OFFSET_IRQEN 0x0e
-#define POKEY_OFFSET_SKCTLS 0x0f
+#define POKEY_OFFSET_SKCTL 0x0f
 
 #define POKEY_OFFSET_POT0 0x00
 #define POKEY_OFFSET_POT1 0x01
@@ -46,7 +46,7 @@ extern UBYTE POKEY_KBCODE;
 extern UBYTE POKEY_IRQST;
 extern UBYTE POKEY_IRQEN;
 extern UBYTE POKEY_SKSTAT;
-extern UBYTE POKEY_SKCTLS;
+extern UBYTE POKEY_SKCTL;
 extern int POKEY_DELAYED_SERIN_IRQ;
 extern int POKEY_DELAYED_SEROUT_IRQ;
 extern int POKEY_DELAYED_XMTDONE_IRQ;
