@@ -2,6 +2,7 @@
 * afile.[ch], atari.c, sio.c:  Support .pro images
 * ui.c: replace ^R in source with \022
 * pbi_bb.c, pbi_mio.c: correct Util_filenamenotset error.
+* mzpokeysnd.c, pokey.c, pokey.h: rename SKCTLS -> SKCTL
 
 
 2008-10-13  Matthias Reichl  <hias@horus.com>
